wrong theme name

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*
-Theme Name: evergreen-cycles
+Theme Name: cossar
 Theme URI: http://52.88.123.0
 Author: Evan Smyth, Kimberly Stewart, Nectar Shakir, Brian Baker
 Author URI: http://52.88.123.0
