--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@ Author: Evan Smyth, Kimberly Stewart, Nectar Shakir, Brian Baker
 Author URI: http://52.88.123.0
 Description: This is the theme for our itc210 wordpress course at Seattle Central College
 Version: 1.0
+
+plugins
 */
 
 
