--- a/style.css
+++ b/style.css
@@ -172,6 +172,7 @@ div.menu-main-container {
 /* Start main section */
 
 section {
+
 	background-color: #F2F4F2;
 	margin-top: 20px;
 	margin-bottom: 20px;
@@ -186,9 +187,10 @@ section {
 /* Start sidebar */
 
 div#sub-navigation {
-	background-color: #B6C3CD;
+
+  background-color: #B6C3CD;
 	margin-top: 2%;
-	width: 31.914893%;
+	width: 29.5%;
 	float: right;
 	margin-bottom: 2%;
 	border-radius: 5px;
@@ -311,6 +313,25 @@ footer {
 
   clear: both;
   background: green;
+  height: 250px;
 }
+
+#footer-nav {
+
+  background: purple;
+  width: 25%;
+  float: left;
+
+}
+
+#footer-affiliates {
+
+  float: right;
+  width: 25%;
+  height: 100px;
+  background: yellow;
+
+}
+
 
 /* End footer */
