--- a/style.css
+++ b/style.css
@@ -153,6 +153,22 @@ div.menu-main-container {
 
 /*End Nav*/
 
+/*Begin Mobile Nav*/
+
+.jquery-nav {
+	max-width: 1024px;
+	height: 50px;
+	margin: 0 auto;
+	overflow: hidden;
+}
+.jquery-title {
+
+	display:none;
+}
+
+/*End Mobile Nav*/
+
+
 /* Start flexslider */
 
 #flexslider {
@@ -268,7 +284,6 @@ h3.sub-navigation-title {
 #home-cta {
 
   width: 100%;
-  height: 300px;
   background: yellow;
   margin-top: 20px;
 
@@ -278,7 +293,6 @@ h3.sub-navigation-title {
 .home-cta-content {
 
   width: 32%;
-  height: 300px;
   background: maroon;
   float: left;
 
@@ -313,7 +327,6 @@ h3.sub-navigation-title {
 #home-projects {
 
   width: 100%;
-  height: 300px;
   background: purple;
   margin-top: 20px;
 
@@ -323,7 +336,6 @@ h3.sub-navigation-title {
 
   float: left;
   width: 48%;
-  height: 300px;
   background: tan;
 
 }
@@ -357,27 +369,12 @@ h3.sub-navigation-title {
 #home-director {
 
   width: 100%;
-  height: 300px;
   background: pink;
   margin-top: 20px;
 
 }
 
-.home-director-image {
 
-  float: left;
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-
-}
-#home-director p {
-
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-
-}
 
 
 /* End home director */
@@ -388,7 +385,6 @@ footer {
 
   clear: both;
   background: green;
-  height: 250px;
 
 }
 
@@ -420,3 +416,178 @@ li.menu-item {
 
 
 /* End footer */
+
+/* Start Media Queries */
+
+
+
+/* Start Tablet Query */
+
+@media all and (max-width: 1024px) {
+
+#wrapper {
+
+  width: 100%;
+}
+
+
+}
+
+/* End Tablet Query */
+
+
+
+/* Start Mobile Query */
+
+@media all and (min-width: 320px) and (max-width: 667px) {
+
+
+
+
+  #wrapper, section, #home-cta, .home-cta-content, #home-projects, .home-projects-content, #home-director, #footer-nav, #footer-affiliates {
+
+    float: none;
+    width: 100%;
+    margin: auto;
+    margin-top: 10px;
+    text-align: center;
+
+
+  }
+
+  div#sub-navigation, #homepage-sidebar  {
+
+    display: none;
+
+  }
+
+  .home-cta-content:nth-child(n+2):nth-child(-n+3) {
+
+    margin: 0;
+
+  }
+
+
+
+  .home-projects-content:nth-child(2) {
+
+    margin: 0;
+
+  }
+
+
+
+
+
+  /* Begin Mobile Nav */
+
+  .jquery-nav {
+
+  width:100%;
+  height: auto;
+
+}
+
+.jquery-title {
+
+  display: block;
+  padding: 10px 0px;
+
+}
+
+.jquery-nav .menu-main-container {
+
+  display: none;
+  height:auto;
+
+}
+
+#menu-main {
+
+  text-align: left;
+  height:auto;
+
+}
+
+
+.jquery-nav li {
+
+  float: none;
+  display: block;
+
+}
+
+#menu-main > li {
+
+  display: block;
+
+}
+
+#menu-main > li a {
+
+  display: block;
+
+}
+
+.jquery-nav {
+
+  background-color:#2B621D;
+
+
+}
+
+.jquery-title {
+
+  padding: 14px 24px;
+  font-size: 1.125em;
+  display:inherit;
+
+}
+
+.jquery-title a {
+
+  color:#EEF2DC !important;
+
+}
+div.menu-icon {
+
+  float:right;
+  width:30px;
+
+}
+
+div.menu-icon img {
+
+  width:100%;
+
+}
+
+#menu-main li:hover > ul.sub-menu {
+
+  display: none
+
+}
+
+
+
+
+  /* End Mobile Nav */
+
+
+
+}
+
+
+/* End Mobile Query */
+
+
+
+
+
+
+
+
+
+
+
+/* End Media Queries */
