--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@@ -0,0 +1,849 @@
 @charset "UTF-8";
 /*
 Theme Name: cossar
@@ -36,10 +35,6 @@ A versatile flexslider that displays a rotating slide show of images on the fron
   margin: 0;
 }
 
-body {
-	font-family:'Source Sans Pro', sans-serif;
-}
-
 #wrapper {
 width:100%;
   max-width: 64em; /*1024px*/
@@ -67,6 +62,8 @@ height:4em;
 }
 
 /*Begin Logo*/
+
+
 #logo {
 position:absolute;
 top:35%;
@@ -79,7 +76,11 @@ z-index:999;
 max-width:100%;
 display:block;
 }
+
+/*End Logo*/
+
 /*Begin Nav*/
+
 #nav-box {
 width:100%;
 background: #1D4272;
@@ -214,7 +215,7 @@ width:20%;
 
 .breadcrumbs {
 
-margin-top: 75px;
+margin-top: 20px;
 
 }
 
@@ -252,7 +253,6 @@ section {
 section h3 {
 
   text-align: center;
-  font-family:'Oswald', sans-serif;
   margin-bottom: 10px;
   color: #1D4272;
 }
@@ -350,10 +350,16 @@ div#sub-navigation {
 
 }
 
+#home-categories ul li a:hover {
+
+  color: #1D4272;
+
+}
+
 #home-categories-h2 {
   width: 100%;
-  border-bottom: 4px solid #2995C1; 
-  font-family:'Oswald', sans-serif;
+  border-bottom: 4px solid #2995C1;
+
 
 }
 
@@ -370,13 +376,25 @@ color: #1D4272;
 
 }
 
+#home-widget-item ul li a {
+
+  text-decoration: none;
+  color: #2995C1;
+
+}
+
+#home-widget-item ul li a:hover {
+
+  color: #1D4272;
+
+}
+
 #home-news-h3 {
 
   width: 100%;
   border-bottom: 4px solid #2995C1;
   text-align: left;
   color: #1D4272;
-  font-family:'Oswald', sans-serif;
 
 }
 
@@ -392,7 +410,7 @@ color: #1D4272;
   border-bottom: 4px solid #2995C1;
   text-align: left;
   color: #1D4272;
-  font-family:'Oswald', sans-serif;
+
 
 }
 
@@ -468,7 +486,20 @@ width: 100%;
   text-align: center;
   margin-top: 10px;
   color: #2995C1;
-  font-family:'Oswald', sans-serif;
+
+}
+
+.home-cta-content a {
+
+  text-decoration: none;
+  color: #2995C1;
+
+}
+
+.home-cta-content a:hover {
+
+  color: #1D4272;
+
 }
 
 
@@ -700,19 +731,6 @@ height:3em;
 
     margin: 0;
 
-  }
-  
-#director-image {
-  width: 100%;
-}
-
-#director-p {
-	clear: both;
-	width: 100%;
-}
-  
-  footer {
-	  display: none;
   }
 
 
