--- a/style.css
+++ b/style.css
@@ -261,7 +261,8 @@ section {
 section h3 {
  font-family:'Oswald', sans-serif;
   text-align: center;
-  margin-bottom: 10px;
+  margin-bottom: 1em;
+  padding-top:1em;
   color: #1D4272;
 }
 
@@ -720,6 +721,13 @@ height:3em;
     margin: auto;
     margin-top: 10px;
     text-align: center;
+  }
+  
+  .home-cta-content {
+  padding-top:2em;
+  }
+  #home-cta {
+  margin-bottom:2em;
   }
 
   #wrapper {
